# agora

./: .gitignore  BACKGROUND.md  CORPUS.md  Cargo.toml  DOMAINS.md  README.md  references.bib
crates/agora-cli/: Cargo.toml
crates/agora-cli/src/: main.rs
crates/agora-cli/src/commands/: doctor.rs  domains.rs  generate.rs  init.rs  mod.rs  rules.rs  stats.rs  validate.rs
crates/agora-core/: Cargo.toml
crates/agora-core/src/: anomaly.rs  api.rs  lib.rs  sim.rs  world.rs
crates/agora-core/tests/: all_domains.rs  anomaly.rs  engine.rs
crates/agora-host/: Cargo.toml
crates/agora-host/src/: cost.rs  lib.rs  probe.rs
crates/agora-introspect/: Cargo.toml
crates/agora-introspect/src/: cm.rs  hll.rs  lib.rs  moments.rs  stats.rs
crates/agora-io/: Cargo.toml
crates/agora-io/src/: csv.rs  graphml.rs  lib.rs  parquet.rs  read.rs  threaded.rs
crates/agora-io/tests/: roundtrip.rs
crates/agora-py/: Cargo.toml  README.md  pyproject.toml
crates/agora-py/src/: lib.rs
crates/agora-rules/: Cargo.toml
crates/agora-rules/domains/: SCHEMA.md  crypto.yaml  cyber.yaml  ecommerce.yaml  finance.yaml  healthcare.yaml  transport.yaml
crates/agora-rules/src/: config.rs  domains.rs  lib.rs  meta.rs  rulebase.rs
crates/agora-sample/: Cargo.toml
crates/agora-sample/src/: alias.rs  dist.rs  lib.rs  rng.rs
crates/agora-topology/: Cargo.toml
crates/agora-topology/src/: csr.rs  lib.rs  models.rs
docs/: ARCHITECTURE.md  BASELINES.md  EVAL.md  EXPERIMENTS.md  INSTALL.md  OUTPUT.md  VALIDATION.md
paper/: main.tex  references.bib
paper/figures/: fig_architecture.drawio  fig_demand_ba.drawio  make_figures.py  make_matrix_fig.py
python/: README.md
python/agora_eval/: __init__.py  __main__.py  baselines.py  compare.py  deep_gen.py  detector.py  downstream_extra.py  load.py  metrics_advanced.py  stats.py  tabular_gen.py  tgn_eval.py
python/agora_rag/: __init__.py  __main__.py  chunk.py  draft.py  embed.py  extract.py  fetch.py  grounding.py  manifest.py  parse.py  pipeline.py  retrieve.py  validate_compile.py  yamltags.py
python/tests/: grounding_gold.json
