[workspace]
resolver = "2"
members = [
    "crates/agora-core",
    "crates/agora-rules",
    "crates/agora-topology",
    "crates/agora-sample",
    "crates/agora-introspect",
    "crates/agora-io",
    "crates/agora-host",
    "crates/agora-cli",
    "crates/agora-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://anonymous.4open.science/r/agora"
authors = ["AGORA contributors"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "wrap_help"] }
sysinfo = "0.33"
libc = "0.2"
rayon = "1.10"
rand = "0.8"
rand_pcg = "0.3"
humansize = "2"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
owo-colors = "4"

agora-core = { path = "crates/agora-core" }
agora-rules = { path = "crates/agora-rules" }
agora-topology = { path = "crates/agora-topology" }
agora-sample = { path = "crates/agora-sample" }
agora-introspect = { path = "crates/agora-introspect" }
agora-io = { path = "crates/agora-io" }
agora-host = { path = "crates/agora-host" }

[profile.release]
lto = "thin"
codegen-units = 1
