[package]
name = "agora-core"
description = "Discrete-event simulation engine: world state, behavior/adversary/failure processes, intent labeling"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
rayon.workspace = true
agora-rules.workspace = true
agora-sample.workspace = true
agora-topology.workspace = true
rand.workspace = true
rand_distr = "0.4"
