[package]
name = "agora-host"
description = "Host capability auto-probe, adaptive configuration and the dry-run cost model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
