[package]
name = "agora-sample"
description = "Seeded, splittable RNG and O(1) samplers (alias tables, standard distributions) for bit-reproducible parallel runs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agora-rules.workspace = true
anyhow.workspace = true
rand.workspace = true
rand_pcg.workspace = true
rand_distr = "0.4"
