[package]
name = "agora-topology"
description = "Pluggable structure/evolution models for the skeleton graph (BA, WS, SBM, R-MAT, forest fire, spatial, affiliation)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
rayon.workspace = true
agora-rules.workspace = true
agora-sample.workspace = true
rand.workspace = true
rand_distr = "0.4"
